--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
+proxtop (1.1.0-1) stable; urgency=medium
+
+  * Added GitHub Actions workflow for automated .deb builds
+  * Added comprehensive documentation (DOCUMENTATION.md)
+  * Added detailed metrics reference (METRICS_REFERENCE.md)
+  * Streamlined build dependencies
+
 proxtop (1.0.0-1) stable; urgency=medium
 
   * Initial Debian package release
   * Renamed from kvmtop to proxtop
   * Added Proxmox VE support with QMP connector
   * Auto-detection of hypervisor type
-
- -- proxtop maintainers <proxtop@example.com>  Sun, 23 Feb 2026 12:00:00 +0000
-
