--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
+proxtop (1.1.4-1) stable; urgency=medium
+  * Fixed PSI collector not returning all metrics in non-verbose mode
+  * Text printer now displays host-level metrics (PSI, CPU host stats, etc.)
+
 proxtop (1.1.3-1) stable; urgency=medium
-  * Fixed per interface network display
+  * Fixed per interface network display showing no data for verbose fields
 
 proxtop (1.1.2-1) stable; urgency=medium
 
