--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+proxtop (1.1.7-1) stable; urgency=medium
+  * Added separate LVM view ('l' key) for LVM logical volumes
+  * Added separate Multipath view ('x' key) for dm-multipath devices
+  * LVM/multipath detection uses /sys/block/dm-*/dm/uuid (LVM-, mpath- prefixes)
+  * Device mapper devices show friendly names from /dev/mapper/
+
 proxtop (1.1.6-1) stable; urgency=medium
   * Fixed physical disk view %UTIL calculation (was showing 0)
   * Physical disk view now shows proper per-second rates for all metrics
